fix gallery grid on smaller screen and update css

--- a/css/css/module.css
+++ b/css/css/module.css
@@ -2,9 +2,19 @@
   padding: 50px 0;
 }
 
-.about__button, .menu__button, .quote__button {
+.button {
   margin: 30px 0;
   padding: 25px;
+}
+
+.button__link {
+  background-color: #1f1f1f;
+  color: #fff;
+
+  padding: inherit;
+  text-transform: uppercase;
+  letter-spacing: 1px;
+  text-decoration: none;
 }
 
 .about__cards, .menu__cards {
@@ -32,16 +42,6 @@
 
   letter-spacing: 1px;
   text-transform: uppercase;
-}
-
-.about__link, .menu__link, .quote__link {
-  background-color: #1f1f1f;
-  color: #fff;
-
-  padding: inherit;
-  text-transform: uppercase;
-  letter-spacing: 1px;
-  text-decoration: none;
 }
 
 .about-page {
@@ -149,14 +149,14 @@ i.footer__social {
 .gallery {
   display: grid;
   grid-template-columns: repeat(2, 1fr);
-  grid-template-rows: repeat(6, 235px);
+  grid-template-rows: repeat(auto-fit, 235px);
   grid-column-gap: 10px;
   grid-row-gap: 10px;
   padding: 15px;
 }
 
 .gallery__img, .menu__img {
-  height: 100%;
+  height: 235px;
   width: 100%;
 }
 
@@ -345,6 +345,14 @@ i.footer__social {
 
     top: 46%;
     max-width: none;
+  }
+
+  .gallery {
+    grid-template-rows: repeat(6, 235px);
+  }
+
+  .gallery__img {
+    height: 100%;
   }
 
   .gallery__1, .gallery__2 {
